<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_layout"
    tools:context=".StudentLoginPage">

    <GridLayout
        android:id="@+id/GridHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="135dp"
                android:layout_height="100dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/eval_logo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:layout_marginLeft="20dp"
                android:text="Hello, Student!"
                android:textColor="@color/basteBrown"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="GoBack"
                android:src="@drawable/baste_logo" />
        </LinearLayout>
    </GridLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ContainerSignIn"
        android:layout_width="306dp"
        android:layout_height="410dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="20dp"
        android:elevation="10dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/layout_front"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GridHeader"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/et_StudId"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/et_design"
            android:ems="10"
            android:hint="Student ID Number"
            android:text=""
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/et_Password"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/et_design"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_StudId" />

        <ImageView
            android:id="@+id/iv_show_hide_pwd"
            android:layout_width="25dp"
            android:layout_height="27dp"
            app:layout_constraintBottom_toBottomOf="@+id/et_Password"
            app:layout_constraintEnd_toEndOf="@+id/et_Password"
            app:layout_constraintHorizontal_bias="0.96"
            app:layout_constraintStart_toStartOf="@+id/et_Password"
            app:layout_constraintTop_toTopOf="@+id/et_Password"
            app:srcCompat="@drawable/hide" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="sans-serif"
            android:text="@string/SignIn"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.119"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="154dp"
            android:fontFamily="sans-serif"
            android:text="@string/ForgotPass"
            android:textColor="@color/greenDark"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_Password" />

        <Button
            android:id="@+id/btnLoginStudent"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/button_rounded"
            android:backgroundTint="@null"
            android:fontFamily="sans-serif"
            android:text="@string/Login"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPass" />

        <View
            android:id="@+id/view"
            android:layout_width="250dp"
            android:layout_height="2dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="28dp"
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFaculty" />

        <TextView
            android:id="@+id/tvFaculty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="sans-serif"
            android:text="@string/Professor"
            android:textColor="@color/greenDark"
            android:textSize="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLoginStudent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>

